# playlistach

./: LICENSE  playlistach.cabal
backend/: Playlistach.hs
backend/Playlistach/: Common.hs  ServantExt.hs  Soundcloud.hs  Vk.hs
backend/Playlistach/Model/: Origin.hs  Track.hs  WithId.hs
backend/Playlistach/Util/: List.hs
frontend/: app.html  app.js  search.js  styles.css
src/: Playlistach.hs
src/Playlistach/: Mpeg.hs  ServantExt.hs  Soundcloud.hs  Types.hs  Vk.hs
src/Playlistach/Model/: Track.hs
web/: app.html  app.js  search.html
