name:                playlistach
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              aemxdp
maintainer:          aemxdp@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable playlistach
  main-is:             Playlistach.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       array,
                       vector,
                       either,
                       exceptions,
                       mmorph,
                       mtl,
                       VKHS >=0.5 && <0.6,
                       binary,
                       string-conversions,
                       bytestring,
                       text,
                       aeson,
                       formatting,
                       http-client,
                       http-types,
                       http-media,
                       hedis,
                       pipes,
                       pipes-safe,
                       pipes-http,
                       pipes-bytestring,
                       wai,
                       wai-middleware-static,
                       warp,
                       warp-tls,
                       servant,
                       servant-client,
                       servant-server,
                       postgresql-simple,
                       opaleye,
                       hedis,
                       product-profunctors
  hs-source-dirs:      backend
  default-language:    Haskell2010